# summa.ai

./: README.md
db/: delete.py  delete_all.py  pyproject.toml
db/migrations/: 1_field_filter.py  2_intermediate.py  3_workflow.py  4_phase.py  5_request.py  6_datasource.py  7_report.py  8_annotation.py
lambdas/: chat.js  index.js  package-lock.json  package.json  read.js  report.js  serverless.yml
ui/: package-lock.json  package.json
ui/]}L>LP>|LP>LP:/: settings.json
ui/src/: Alerts.jsx  App.js  BatchButton.jsx  Home.jsx  Layout.jsx  RequestsButton.jsx  index.js
ui/src/AccountManager/: AccountManager.jsx
ui/src/DataSources/: ConfigureDataSource.jsx  ConfirmDataSource.jsx  DataSourceHome.jsx  DataSourceSplitWizard.jsx  DataSources.jsx  SourceSelector.jsx  SplitWizard.jsx
ui/src/Reports/: Report.jsx  ReportsHome.jsx
ui/src/RequestManager/: BatchControls.jsx  BatchManager.jsx  PromptControls.jsx  RequestManager.jsx
ui/src/WorkflowBuilder/: WorkflowBuilder.jsx
ui/src/Workflows/: PhaseRouter.jsx  Phases.jsx  Workflow.jsx  WorkflowBuilder.jsx
ui/src/components/: Boilerplate.jsx  Checkmark.jsx  Flow.jsx  HighlightText.jsx  IntermediatePreview.jsx  IntermediatesPreview.jsx
ui/src/recoil/: atoms.js  batchState.js
ui/src/utils/: RequestManager.js  graphqlBuilder.js  timeUtils.js  tokenHelpers.js  (+1 more)
ui2/: package-lock.json  package.json
ui2/app/: globals.css  layout.tsx  page.tsx
ui2/components/: UserNav.tsx
weaviate/: docker-compose.yml  pyproject.toml
weaviate/migrations/: 1_field_filter.py  2_intermediate.py  4_phase.py  6_datasource.py
(+48 files in other folders)
