[tool.poetry]
name = "db"
version = "0.1.0"
description = ""
authors = ["Danny Robinson <danny.robinson111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
weaviate-client = "^3.24.1"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
